--- a/build.gradle
+++ b/build.gradle
@@ -14,20 +14,26 @@ repositories {
 }
 
 dependencies {
+    //SpringBoot相关
     compile group:'org.springframework.boot',name: 'spring-boot-starter-web',version: '1.5.9.RELEASE'
     compile group:'org.springframework.boot',name: 'spring-boot-starter-thymeleaf',version: '1.5.9.RELEASE'
     compile group:'org.springframework.boot',name:'spring-boot-starter-data-jpa',version: '1.5.9.RELEASE'
+    compile group:'org.springframework.boot',name: 'spring-boot-starter-security',version: '1.5.9.RELEASE'
 
     // 添加 Spring Boot 开发工具依赖
     compile group: 'org.springframework.boot',name:'spring-boot-devtools',version: '1.5.9.RELEASE'
 
+    //Thymeleaf相关
     compile group: 'org.thymeleaf',name:'thymeleaf',version: '3.0.9.RELEASE'
     compile group: 'nz.net.ultraq.thymeleaf',name: 'thymeleaf-layout-dialect',version: '2.2.0'
     compile group: 'org.thymeleaf',name: 'thymeleaf-spring4',version: '3.0.9.RELEASE'
+    compile group: 'org.thymeleaf.extras',name: 'thymeleaf-extras-springsecurity4',version: '3.0.9.RELEASE'
     compile group: 'org.apache.commons',name: 'commons-lang3',version: '3.7'
 
+    //数据层相关
     compile group: 'mysql',name: 'mysql-connector-java',version: '6.0.5'
 
     compile group: 'org.hibernate',name: 'hibernate-core',version: '5.2.8.Final'
+    compile group: 'org.hibernate',name: 'hibernate-entitymanager',version: '5.2.8.Final'
     testCompile group: 'org.springframework.boot',name:'spring-boot-starter-test',version: '1.5.9.RELEASE'
 }
